### doc(Compose): fix image and link (HEAD -> feat/observability)
>Mon, 10 Jun 2024 09:42:35 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### doc(compose): Changed code samples to use two backquotes instead of one (RST format).
>Thu, 6 Jun 2024 17:06:16 +0200

>Author: emuller (emuller@geomatys.com)

>Commiter: emuller (emuller@geomatys.com)




### doc(Compose): Add documentation to help using and understanding compose configuration
>Thu, 6 Jun 2024 15:32:01 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### feat(Compose): Add an example dashboard for HTTP access statistics
>Thu, 6 Jun 2024 11:28:43 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### feat(Python): activate uvicorn logging export using open-telemetry
>Thu, 6 Jun 2024 10:28:26 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### feat(Compose): Add observability stack
>Tue, 4 Jun 2024 18:31:27 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)

Add an observability configuration using Open Telemetry + Grafana to monitor application traces and logs



### feat(Compose): add a minimal compose configuration
>Tue, 4 Jun 2024 16:18:56 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### fix(Docker): fix and document dev docker build
>Tue, 4 Jun 2024 16:16:53 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)




### Added Slack support for contacting the administrator
>Mon, 3 Jun 2024 15:33:53 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile