@@ -1,4 +1,15 @@
-### doc(Compose): fix image and link (HEAD -> feat/observability)
+### refactor(Compose): change api configuration binding (HEAD -> feat/observability)
+>Wed, 12 Jun 2024 14:14:28 +0200
+
+>Author: Alexis Manin (alexis.manin@geomatys.com)
+
+>Commiter: Alexis Manin (alexis.manin@geomatys.com)
+
+Use bind mount instead of config block, to enhance retro-compatibility with older versions of docker-compose
+
+
+
+### doc(Compose): fix image and link (origin/feat/observability)
 >Mon, 10 Jun 2024 09:42:35 +0200
 
 >Author: Alexis Manin (alexis.manin@geomatys.com)
